pseudocoding data selection and processing

--- a/machine_learning_mockup.ipynb
+++ b/machine_learning_mockup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "142215a0",
+   "id": "d93f55e7",
    "metadata": {},
    "source": [
     "\n",
@@ -15,26 +15,96 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cb53ed8",
+   "id": "c21dc381",
    "metadata": {},
    "source": [
     "# Data Selection"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e766f816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove not useful columns from dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00170694",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group dataframe based on number of breweries in the city using groupby()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c394fa5e",
+   "id": "6128aa4b",
    "metadata": {},
    "source": [
     "# Data Processing"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aefe1761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform String Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e29db37d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale data if needed (StandardScaler)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "0b23441c",
+   "id": "abedc4c5",
    "metadata": {},
    "source": [
     "# Data Transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f6ab069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Cleaned Data to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0ec4f67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export cleaned data csv to sql table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3018a260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use an elbow curve to find "
    ]
   }
  ],
