data transformation pseudocode

--- a/machine_learning_mockup.ipynb
+++ b/machine_learning_mockup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d93f55e7",
+   "id": "3c8c0695",
    "metadata": {},
    "source": [
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c21dc381",
+   "id": "54ac1c23",
    "metadata": {},
    "source": [
     "# Data Selection"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e766f816",
+   "id": "d90d8a27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00170694",
+   "id": "1add4c80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group dataframe based on number of breweries in the city using groupby()"
+    "# Group dataframe based on number of breweries and location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8a27f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge dataframe with demographic infro dataframe grouped by location"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6128aa4b",
+   "id": "49962582",
    "metadata": {},
    "source": [
     "# Data Processing"
@@ -52,17 +62,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefe1761",
+   "id": "4038e868",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transform String Columns"
+    "# Transform String Columns(Onehotencoder)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e29db37d",
+   "id": "b2c394da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abedc4c5",
+   "id": "0e133298",
    "metadata": {},
    "source": [
     "# Data Transformation"
@@ -80,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f6ab069",
+   "id": "71bf24fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ec4f67",
+   "id": "c49719cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +110,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3018a260",
+   "id": "94e75e82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use an elbow curve to find "
+    "# Set X and y \n",
+    "# X = demographic info + number of Breweries per location(zipcode tabulation area?)\n",
+    "# y = number of stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b38aac65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# traintestsplit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9466bf9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of the model(LinearRegression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8bd2db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model with the dataset \n",
+    "model.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7057f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create predictions\n",
+    "predictions = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "283e1651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validate the model\n",
+    "# accuracy_score\n",
+    "# confusion_matrix/classification_report"
    ]
   }
  ],
