--- a/machine_learning_mockup.ipynb
+++ b/machine_learning_mockup.ipynb
@@ -1,21 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "3c8c0695",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b76fee5c",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "1. Split the data into input(X) and output(y)\n",
-    "2. Traintestsplit\n",
-    "3. Create an instance of the model\n",
-    "4. Train the model with the dataset model.fit(X,y)\n",
-    "5. Create predictions with y_pred = model.predict(X)"
+    "# Import dependencies\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54ac1c23",
+   "id": "be134445",
    "metadata": {},
    "source": [
     "# Data Selection"
@@ -24,7 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90d8a27",
+   "id": "d61abbb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64e21612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1add4c80",
+   "id": "a2e8d183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e8a27f9",
+   "id": "ec2fe383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49962582",
+   "id": "24e04b58",
    "metadata": {},
    "source": [
     "# Data Processing"
@@ -62,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4038e868",
+   "id": "ca26bf4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c394da",
+   "id": "8c829479",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e133298",
+   "id": "4fa0bb6f",
    "metadata": {},
    "source": [
     "# Data Transformation"
@@ -90,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71bf24fd",
+   "id": "f7d1e2b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49719cd",
+   "id": "16f3d3f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e75e82",
+   "id": "d6e6f5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38aac65",
+   "id": "2fcda03b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9466bf9f",
+   "id": "0bed1191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8bd2db",
+   "id": "435e9843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a7057f1",
+   "id": "a4590e9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +171,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "283e1651",
+   "id": "ac7817bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Validate the model\n",
     "# accuracy_score\n",
     "# confusion_matrix/classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ebcca02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find impact of different variables"
    ]
   }
  ],
