editing get_rei_stores function to create more ordered output

--- a/yelp_api_pulls.ipynb
+++ b/yelp_api_pulls.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1cff8de4",
+   "id": "c105cf6b",
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0f188938",
+   "id": "c643da2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "601ac96a",
+   "id": "d6e00efc",
    "metadata": {
     "scrolled": true
    },
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1f53091b",
+   "id": "db98c036",
    "metadata": {
     "scrolled": true
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "50a2a618",
+   "id": "23c4b231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b4ec7477",
+   "execution_count": 52,
+   "id": "da8a57d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,21 +266,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c5e3dacd",
+   "execution_count": 53,
+   "id": "6cfe9f6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to pull stores from yelp with location as the variable\n",
     "def get_rei_stores(location):\n",
     "    with YelpAPI(api_key) as yelp_api:\n",
-    "        results.append(yelp_api.search_query(term='REI', location = location))"
+    "        # city_data is the json file with all businesses returned from search\n",
+    "        city_data = yelp_api.search_query(term='REI', location = location)\n",
+    "        # For each business in the search, return business name and coordinates\n",
+    "        for i in range(len(city_data['businesses'])):\n",
+    "            business_name = city_data['businesses'][i]['name']\n",
+    "            business_lat = city_data['businesses'][i]['coordinates']['latitude']\n",
+    "            business_long = city_data['businesses'][i]['coordinates']['longitude']\n",
+    "            results.append({\"Name\":business_name, \"Lat\":business_lat, \"Lng\": business_long})\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "50315140",
+   "execution_count": 54,
+   "id": "d350e95c",
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +309,115 @@
     "        get_rei_stores(city)\n",
     "    except:\n",
     "        print(f\"An exception occurred for {city}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0a14a68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>REI</td>\n",
+       "      <td>45.016018</td>\n",
+       "      <td>-93.182877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>REI</td>\n",
+       "      <td>44.860933</td>\n",
+       "      <td>-93.291281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>REI</td>\n",
+       "      <td>45.091260</td>\n",
+       "      <td>-93.427546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Midwest Mountaineering</td>\n",
+       "      <td>44.970720</td>\n",
+       "      <td>-93.246890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hoigaard's</td>\n",
+       "      <td>44.930329</td>\n",
+       "      <td>-93.347251</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Name        Lat        Lng\n",
+       "0                     REI  45.016018 -93.182877\n",
+       "1                     REI  44.860933 -93.291281\n",
+       "2                     REI  45.091260 -93.427546\n",
+       "3  Midwest Mountaineering  44.970720 -93.246890\n",
+       "4              Hoigaard's  44.930329 -93.347251"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert to pandas DataFrame\n",
+    "rei_df = pd.DataFrame(results)\n",
+    "rei_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "57276da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6402"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# length of rei_df\n",
+    "len(rei_df)"
    ]
   }
  ],
