retrieving North Face data

--- a/yelp_api_pulls.ipynb
+++ b/yelp_api_pulls.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c105cf6b",
+   "id": "74724a51",
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c643da2d",
+   "id": "24dd908a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d6e00efc",
+   "id": "bc048a93",
    "metadata": {
     "scrolled": true
    },
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "db98c036",
+   "id": "5e909cd8",
    "metadata": {
     "scrolled": true
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "23c4b231",
+   "id": "c8c3cdcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,18 +256,18 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "da8a57d8",
+   "id": "18aa4cd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create empty list to hold results of yelp api call\n",
-    "results = []"
+    "# Create empty list to hold rei results of yelp api call\n",
+    "rei_results = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6cfe9f6e",
+   "id": "b190e659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,14 +281,14 @@
     "            business_name = city_data['businesses'][i]['name']\n",
     "            business_lat = city_data['businesses'][i]['coordinates']['latitude']\n",
     "            business_long = city_data['businesses'][i]['coordinates']['longitude']\n",
-    "            results.append({\"Name\":business_name, \"Lat\":business_lat, \"Lng\": business_long})\n",
+    "            rei_results.append({\"Name\":business_name, \"Lat\":business_lat, \"Lng\": business_long})\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d350e95c",
+   "id": "544f8ac2",
    "metadata": {},
    "outputs": [
     {
@@ -313,8 +313,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "0a14a68e",
+   "execution_count": 64,
+   "id": "fd6f7f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rei_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12448/3275479875.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Convert to pandas DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrei_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrei_results\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mrei_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rei_results' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert to pandas DataFrame\n",
+    "rei_df = pd.DataFrame(rei_results)\n",
+    "rei_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "87496c72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6402"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# length of rei_df\n",
+    "len(rei_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "820d0293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create empty list to hold north face results of yelp api call\n",
+    "north_face_results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "d93664d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to pull stores from yelp with location as the variable\n",
+    "def get_northface_stores(location):\n",
+    "    with YelpAPI(api_key) as yelp_api:\n",
+    "        # city_data is the json file with all businesses returned from search\n",
+    "        city_data = yelp_api.search_query(term='North Face', location = location)\n",
+    "        # For each business in the search, return business name and coordinates\n",
+    "        for i in range(len(city_data['businesses'])):\n",
+    "            business_name = city_data['businesses'][i]['name']\n",
+    "            business_lat = city_data['businesses'][i]['coordinates']['latitude']\n",
+    "            business_long = city_data['businesses'][i]['coordinates']['longitude']\n",
+    "            north_face_results.append({\"Name\":business_name, \"Lat\":business_lat, \"Lng\": business_long})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5f9e4508",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception occurred for Kirkwood\n",
+      "An exception occurred for Athens\n",
+      "An exception occurred for Odessa\n",
+      "An exception occurred for Angola\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply get_northface_stores function to each location in the brewery_cities list\n",
+    "for city in brewery_cities:\n",
+    "    try:\n",
+    "        get_northface_stores(city)\n",
+    "    except:\n",
+    "        print(f\"An exception occurred for {city}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4ac9f893",
    "metadata": {},
    "outputs": [
     {
@@ -346,79 +449,87 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>REI</td>\n",
-       "      <td>45.016018</td>\n",
-       "      <td>-93.182877</td>\n",
+       "      <td>The North Face Mall of America</td>\n",
+       "      <td>44.853423</td>\n",
+       "      <td>-93.241164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>REI</td>\n",
-       "      <td>44.860933</td>\n",
-       "      <td>-93.291281</td>\n",
+       "      <td>The North Face Galleria Edina</td>\n",
+       "      <td>44.877098</td>\n",
+       "      <td>-93.326189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>REI</td>\n",
-       "      <td>45.091260</td>\n",
-       "      <td>-93.427546</td>\n",
+       "      <td>The North Face Albertville Premium Outlets</td>\n",
+       "      <td>45.244440</td>\n",
+       "      <td>-93.663390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Midwest Mountaineering</td>\n",
-       "      <td>44.970720</td>\n",
-       "      <td>-93.246890</td>\n",
+       "      <td>Fjällräven Uptown Outlet</td>\n",
+       "      <td>44.948820</td>\n",
+       "      <td>-93.298670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Hoigaard's</td>\n",
-       "      <td>44.930329</td>\n",
-       "      <td>-93.347251</td>\n",
+       "      <td>Midwest Mountaineering</td>\n",
+       "      <td>44.970720</td>\n",
+       "      <td>-93.246890</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Name        Lat        Lng\n",
-       "0                     REI  45.016018 -93.182877\n",
-       "1                     REI  44.860933 -93.291281\n",
-       "2                     REI  45.091260 -93.427546\n",
-       "3  Midwest Mountaineering  44.970720 -93.246890\n",
-       "4              Hoigaard's  44.930329 -93.347251"
+       "                                         Name        Lat        Lng\n",
+       "0              The North Face Mall of America  44.853423 -93.241164\n",
+       "1               The North Face Galleria Edina  44.877098 -93.326189\n",
+       "2  The North Face Albertville Premium Outlets  45.244440 -93.663390\n",
+       "3                    Fjällräven Uptown Outlet  44.948820 -93.298670\n",
+       "4                      Midwest Mountaineering  44.970720 -93.246890"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert to pandas DataFrame\n",
-    "rei_df = pd.DataFrame(results)\n",
-    "rei_df.head()"
+    "northface_df = pd.DataFrame(north_face_results)\n",
+    "northface_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "57276da1",
+   "execution_count": 65,
+   "id": "82127158",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6402"
+       "4127"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# length of rei_df\n",
-    "len(rei_df)"
+    "# length of northface_df\n",
+    "len(northface_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27aad728",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
