retrieve outdoor gear store data

--- a/data_retrieval.ipynb
+++ b/data_retrieval.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a1eb4c62",
+   "id": "6d5f4b04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c0b675b5",
+   "id": "dd9e5fbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5299ee4",
+   "id": "d93d2a03",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9a308fad",
+   "id": "192ead76",
    "metadata": {
     "scrolled": true
    },
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d91dc1d9",
+   "id": "1b0dcee6",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b4ccdd22",
+   "id": "4fe10a31",
    "metadata": {
     "scrolled": true
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3a96f25d",
+   "id": "d7722cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,12 +711,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "17b4d12f",
+   "id": "b7bc11bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to pull stores from yelp with location as the variable\n",
-    "def get_breweries(location):\n",
+    "# Function to pull breweries for each location):\n",
     "    with YelpAPI(api_key) as yelp_api:\n",
     "        # city_data is the json file with all businesses returned from search\n",
     "        city_data = yelp_api.search_query(term='Breweries', location = location)\n",
@@ -733,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "df8eb50c",
+   "id": "3a37e65f",
    "metadata": {
     "scrolled": true
    },
@@ -750,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "93b9ddec",
+   "id": "fc31faa2",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3c6a2c99",
+   "id": "464fe1f3",
    "metadata": {},
    "outputs": [
     {
@@ -876,11 +875,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c7de5d9",
+   "execution_count": 28,
+   "id": "0b8917c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create empty List ot hold all Outdoor Gear Stores\n",
+    "outdoor_gear_results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9c42f728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to pull stores from yelp with location as the variable\n",
+    "def get_outdoor_stores(location):\n",
+    "    with YelpAPI(api_key) as yelp_api:\n",
+    "        # city_data is the json file with all businesses returned from search\n",
+    "        city_data = yelp_api.search_query(term='Outdoor Gear', location = location)\n",
+    "        # For each brewery in the search, return business name, coordinates, city, and buisness type\n",
+    "        for i in range(len(city_data['businesses'])):\n",
+    "            name = city_data['businesses'][i]['name']\n",
+    "            lat = city_data['businesses'][i]['coordinates']['latitude']\n",
+    "            long = city_data['businesses'][i]['coordinates']['longitude']\n",
+    "            city = city_data['businesses'][i]['location']['city']\n",
+    "            business_type = city_data['businesses'][i]['categories'][0]['alias']\n",
+    "            outdoor_gear_results.append({\"Name\":name, \"Lat\":lat, \"Lng\": long, \"City\":city, \"Business Type\":business_type})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "518b1159",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception occurred for Arlington\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply get_outdoor_stores function to each location in the cities_list\n",
+    "for city in cities_list:\n",
+    "    try:\n",
+    "        get_outdoor_stores(city)\n",
+    "    except:\n",
+    "        print(f\"An exception occurred for {city}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c0470724",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Business Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Paragon Sports</td>\n",
+       "      <td>40.737760</td>\n",
+       "      <td>-73.990331</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>outdoorgear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>REI</td>\n",
+       "      <td>40.724814</td>\n",
+       "      <td>-73.995205</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>outdoorgear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hatchet Outdoor Supply Co</td>\n",
+       "      <td>40.691300</td>\n",
+       "      <td>-73.997590</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>outdoorgear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fjällräven Epic NYC</td>\n",
+       "      <td>40.721711</td>\n",
+       "      <td>-74.002062</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>outdoorgear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Patagonia Upper West Side</td>\n",
+       "      <td>40.783070</td>\n",
+       "      <td>-73.975118</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>sportswear</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Name        Lat        Lng      City Business Type\n",
+       "0             Paragon Sports  40.737760 -73.990331  New York   outdoorgear\n",
+       "1                        REI  40.724814 -73.995205  New York   outdoorgear\n",
+       "2  Hatchet Outdoor Supply Co  40.691300 -73.997590  Brooklyn   outdoorgear\n",
+       "3        Fjällräven Epic NYC  40.721711 -74.002062  New York   outdoorgear\n",
+       "4  Patagonia Upper West Side  40.783070 -73.975118  New York    sportswear"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outdoor_df = pd.DataFrame(outdoor_gear_results)\n",
+    "outdoor_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3244e276",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3341"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Length of outdoor_df\n",
+    "len(outdoor_df)"
+   ]
   }
  ],
  "metadata": {
