--- a/machine_learning_mockup.ipynb
+++ b/machine_learning_mockup.ipynb
@@ -7,7 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dependencies\n"
+    "# Import dependencies\n",
+    "\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -21,11 +26,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9259c963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = Path(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d61abbb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read CSV"
+    "# Read CSV\n",
+    "brewery_df = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c7859ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brewery_df.head()"
    ]
   },
   {
@@ -83,7 +109,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale data if needed (StandardScaler)"
+    "# Scale data if needed (StandardScaler)\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "data_scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f32e836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brewery_scaled = data_scaler.fit(encoded_df)\n",
+    "\n",
+    "brewery_scaled[:5]"
    ]
   },
   {
@@ -133,7 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# traintestsplit"
+    "# traintestsplit\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=24)"
    ]
   },
   {
@@ -143,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an instance of the model(LinearRegression)"
+    "# Create an instance of the model(LinearRegression)\n",
+    "model = LinearRegression()"
    ]
   },
   {
@@ -165,7 +207,9 @@
    "outputs": [],
    "source": [
     "# Create predictions\n",
-    "predictions = model.predict(X_test)"
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "print(predictions.shape)"
    ]
   },
   {
