--- a/machine_learning_mockup.ipynb
+++ b/machine_learning_mockup.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9259c963",
+   "id": "ca7127c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,8 @@
    "outputs": [],
    "source": [
     "# Read CSV\n",
-    "brewery_df = pd.read_csv(file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c7859ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "brewery_df = pd.read_csv(file_path)\n",
+    "\n",
     "brewery_df.head()"
    ]
   },
@@ -117,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f32e836",
+   "id": "36a1fa0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +213,27 @@
    "source": [
     "# Validate the model\n",
     "# accuracy_score\n",
-    "# confusion_matrix/classification_report"
+    "acc_score = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "# confusion_matrix/classification_report\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37f0ecbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Confusion Matrix\")\n",
+    "display(cm_df)\n",
+    "print(f\"Accuracy Score : {acc_score}\")\n",
+    "print(\"Classification Report\")\n",
+    "print(classification_report(y_test, predictions))"
    ]
   },
   {
