--- a/machine_learning_mockup.ipynb
+++ b/machine_learning_mockup.ipynb
@@ -26,11 +26,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca7127c6",
+   "id": "20d06293",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = Path(\"\")"
+    "file_path_brewery = Path(\"../Resources/brewery.csv\")\n",
+    "file_path_income = Path(\"../Resources/income_data.csv\")"
    ]
   },
   {
@@ -41,9 +42,22 @@
    "outputs": [],
    "source": [
     "# Read CSV\n",
-    "brewery_df = pd.read_csv(file_path)\n",
+    "brewery_df = pd.read_csv(file_path_brewery)\n",
     "\n",
     "brewery_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c9461d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read clothing CSV\n",
+    "income_df = pd.read_csv(file_path_income)\n",
+    "\n",
+    "income_df.head()"
    ]
   },
   {
@@ -73,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge dataframe with demographic infro dataframe grouped by location"
+    "# Merge dataframe with demographic infro dataframe grouped by location\n",
+    "brewery_demo_df = brewery_df.merge(clothing_df, )"
    ]
   },
   {
@@ -109,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36a1fa0b",
+   "id": "fef37795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f0ecbf",
+   "id": "71279c54",
    "metadata": {},
    "outputs": [],
    "source": [
